Fix incompatibility with newer JVM versions.